import { LitElement } from '@polymer/lit-element/lit-element';
export { html, TemplateResult } from 'lit-html/lit-html';

export class ComponentBase extends LitElement {}
